--- a/20200917.md
+++ b/20200917.md
@@ -1,1 +1,10 @@
-## 이번주 배운 내용 정리
+# Javascript ES6+
+***
+## 1. Scope
+***
+함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})
+블락 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.
+- let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.
+
+
+
