--- a/20200917.md
+++ b/20200917.md
@@ -1,10 +1,10 @@
 # Javascript ES6+
-***
 ## 1. Scope
-***
-함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})
-블락 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.
-- let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.
+Scope : 유효공간 , 허용공간, 허용범위를 의미   
+함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})      
+블락 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.     
+- let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.   
+- 결과를 리턴하지 않는 문단들은(if문,for문,while문,switch문) 그 자체가 하나의 Block-Scope가 된다.
 
 
 
