--- a/20200917.md
+++ b/20200917.md
@@ -1,10 +1,31 @@
 # Javascript ES6+
 ## 1. Scope
 Scope : 유효공간 , 허용공간, 허용범위를 의미   
-함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})      
+함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})          
 블락 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.     
 - let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.   
 - 결과를 리턴하지 않는 문단들은(if문,for문,while문,switch문) 그 자체가 하나의 Block-Scope가 된다.
-
+## 2. Hoisting과 TDZ
+Hoisting : 자바 스크립트에서 함수 선언문이나 변수 선언이 실행되기전에 해당 유효 범위 또는 실행 컨텍스트를 최상단으로 끌어올리는 것을 의미한다.    
+- var의 경우는 변수명만 위로 끌어올리고 undefined로 인식한다.
+```(function(){
+    var fruit = "banana";
+    (function(){
+        console.log(fruit); //undefined
+        var fruit = "kiwi";
+    })();
+    console.log(fruit);     //banana
+})();
+console.log(fruit);         //ReferenceError
+```
+- let과 const의 경우에는 변수명만 위로 끌어올리고 끝난다.
+```
+consoel.log(name);
+     if(true){
+        let name ="JIYUN";  //ReferenceError
+    }
+```
+TDZ(Temporal Dead Zone) : 임시 사각지대로 let과 const에서 해당 변수를 선언한 위치에 오기까지 그 변수를 사용할 수 없다는 것을 의미한다.   
+- let과 const도 호이스팅이 일어나긴 하지만, 할당만 하지 않는 것이다.
 
 
