--- a/20200917.md
+++ b/20200917.md
@@ -1,14 +1,24 @@
-# Javascript ES6+
+# Javascript ES6+ :octocat
 ## 1. Scope
 Scope : 유효공간 , 허용공간, 허용범위를 의미   
 함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})          
-블락 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.     
+블록 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.     
 - let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.   
-- 결과를 리턴하지 않는 문단들은(if문,for문,while문,switch문) 그 자체가 하나의 Block-Scope가 된다.
+- 결과를 리턴하지 않는 문단들은(if문,for문,while문,switch문) 그 자체가 하나의 Block-Scope가 된다.   
+- 여기서! for문의 경우에는 예외적으로 for(;;){}에서 ()안에서 선언한 변수까지도 for문 전체 block-scope에 갇힌다.
+```
+var sum = 0;
+for(let i = 0; i<=10;i++){
+        sum+=i;
+}
+console.log(sum);           //55
+console.log(i)              //ReferenceError, i는 for문 안에서 유효함.
+```
 ## 2. Hoisting과 TDZ
 Hoisting : 자바 스크립트에서 함수 선언문이나 변수 선언이 실행되기전에 해당 유효 범위 또는 실행 컨텍스트를 최상단으로 끌어올리는 것을 의미한다.    
 - var의 경우는 변수명만 위로 끌어올리고 undefined로 인식한다.
-```(function(){
+```
+(function(){
     var fruit = "banana";
     (function(){
         console.log(fruit); //undefined
@@ -20,12 +30,47 @@ console.log(fruit);         //ReferenceError
 ```
 - let과 const의 경우에는 변수명만 위로 끌어올리고 끝난다.
 ```
-consoel.log(name);
+console.log(name);
      if(true){
         let name ="JIYUN";  //ReferenceError
     }
 ```
-TDZ(Temporal Dead Zone) : 임시 사각지대로 let과 const에서 해당 변수를 선언한 위치에 오기까지 그 변수를 사용할 수 없다는 것을 의미한다.   
+-콘솔창에서 한번 해본 코드
+```
+console.log(apple);
+var apple = 100;        //undefined
+
+console.log(banana);
+let banana = 200;       //ReferrenceError
+```
+TDZ(Temporal Dead Zone) : 임시 사각지대로 초기화 하지 않은 변수가 있는 곳을 뜻 한다. let과 const는 TDZ의 제약을 받는다.   
 - let과 const도 호이스팅이 일어나긴 하지만, 할당만 하지 않는 것이다.
+## 3. this
+```
+var value = 0
+var obj = {
+  value: 1,
+  setValue: function () {
+    this.value = 2;     //this: obj -> obj.value = 2;
+    (function () {
+      this.value = 3    //this: window -> window.value=3; 전역변수!
+    })();
+  }
+}
+obj.setValue()          
+console.log(value)      //3 (앞선 함수 호출로 전역변수 value가 3이됨.)
+console.log(obj.value)  //2
+```
+- 함수 Scope와 다르게, 블록 Scope는 this의 영향을 받지 않는다.   
+- 여기서 window란 무엇일까?   
+> window는 하나의 객체로, 모든 웹브라우저에는 window 객체가 있다. 전역객체로 모든 자바스크립트 코드가 
+> window 객체에 저장되어있다고 생각하면 된다고 한다.
 
-
+## 4. let
+- let은 var와 비슷하게 생각하되, ***block-scope***에 갇히며 ***TDZ***의 제약을 받는다는 것을 기억!   
+- let은 ***재할당***이 가능하다.   
+```
+let num1 = 10;
+num1 = 20;
+console.log(num1);  // 20
+```
