--- a/20200918.md
+++ b/20200918.md
@@ -1,6 +1,6 @@
-# Javascript ES6+ :octocat
+# Javascript ES6+ 
 ## 1. Scope
-Scope : 유효공간 , 허용공간, 허용범위를 의미   
+>Scope : 유효공간 , 허용공간, 허용범위를 의미   
 함수 Scope : 함수에 의해서 생기는 범위, 변수의 유효 범위 (function(){})          
 블록 Scope : 블락에 의해서 생기는 유호 범위, {}에 의해서 변수의 유효 범위가 결정된다.     
 - let과 const만 블락 scope의 영향을 받으며, var는 영향을 받지 않는다.   
@@ -15,7 +15,7 @@ console.log(sum);           //55
 console.log(i)              //ReferenceError, i는 for문 안에서 유효함.
 ```
 ## 2. Hoisting과 TDZ
-Hoisting : 자바 스크립트에서 함수 선언문이나 변수 선언이 실행되기전에 해당 유효 범위 또는 실행 컨텍스트를 최상단으로 끌어올리는 것을 의미한다.    
+>Hoisting : 자바 스크립트에서 함수 선언문이나 변수 선언이 실행되기전에 해당 유효 범위 또는 실행 컨텍스트를 최상단으로 끌어올리는 것을 의미한다.    
 - var의 경우는 변수명만 위로 끌어올리고 undefined로 인식한다.
 ```
 (function(){
@@ -63,8 +63,8 @@ console.log(obj.value)  //2
 ```
 - 함수 Scope와 다르게, 블록 Scope는 this의 영향을 받지 않는다.   
 - 여기서 window란 무엇일까?   
-> window는 하나의 객체로, 모든 웹브라우저에는 window 객체가 있다. 전역객체로 모든 자바스크립트 코드가 
-> window 객체에 저장되어있다고 생각하면 된다고 한다.
+>> window는 하나의 객체로, 모든 웹브라우저에는 window 객체가 있다. 전역객체로 모든 자바스크립트 코드가 
+>> window 객체에 저장되어있다고 생각하면 된다고 한다.
 
 ## 4. let
 - let은 var와 비슷하게 생각하되, ***block-scope***에 갇히며 ***TDZ***의 제약을 받는다는 것을 기억!   
@@ -74,3 +74,51 @@ let num1 = 10;
 num1 = 20;
 console.log(num1);  // 20
 ```
+반복문 내에서의 함수 실행시
+> 코드가 처음에는 이해가지 않았다.. 기초가 부족한..
+```
+var funcs = [];
+for(var i = 0;i<10;i++){
+    funcs.push(function (){
+    console.log(i)
+    })
+}
+funcs.forEach(function (f){
+    f()
+})
+```
+>결과가 10이 10개 찍힌다길래, 의아했는데.. 차근차근 따져보면 우선 for문을 돌면서 funcs = [function(){console.log(i)};,function(){console.log(i)};...]
+>이런식으로 들어가게 된다. 그리고 실행은 for문이 다 돌고, for each문이 실행될때 비로소 실행된다. 여기서 i는 for문을 나올 때 10이 되어서, 그 i값이 각각 들어가서
+> 10이 10개 찍히게 되는 것이다.
+- 여기서 let을 쓰게 된다면?
+```
+let funcs = [];
+for(let i =0 ; i<10;i++){
+        funcs.push(function(){
+        console.log(i);
+        })
+}
+funcs.forEach(function (f){
+        f()
+})
+```
+>for문이 block-scope내에 존재하므로, 0부터 9까지 찍히게 된다. 각각의 i값마다 별도로 for문의 스코프가 생성!
+## 5. const
+>const는 constant variable의 약자로 상수 변수의미
+- 선언과 동시에 할당해주어야 한다.
+```
+const a;        //Missing initializer in const declaration(상수로 선언했으면 값도 없는데 상수?!)
+a = 10;
+console.log(a); 
+```
+- 재할당이 안된다.
+>>그런데, 상수의 property는 재할당이 가능하다.
+```
+const OBJ = {
+        prop1 : 1;
+        prop2 : 2;
+}
+OBJ.prop1 = 3;
+```
+OBJ.prop1은 OBJ가 가르키고 있는 따로 저장된 객체 안에 있는 prop1로 상수가 아니다!   
+참조형 데이터를 상수변수에 할당할 경우 내부에 있는 property들은 상수가 아니다.   
