--- a/20201009.md
+++ b/20201009.md
@@ -239,7 +239,7 @@ const b = new B();
 console.log(name,age,color); //happy 5 brown
  ```
  순서를 맞춰줄 필요없이, 내가 원하는 부분만 발췌하면 된다. 프로퍼티 축약형도 가능하다.      
- 문제는 깊이가 2일때부터 나타난다.... 보기가 좀 복잡해 진다. 하지만 아래 예졔를 보면 얼마나 편한지 알수 있다!
+ 문제는 깊이가 2일때부터 나타난다.... 보기가 좀 복잡해 진다. 하지만 아래 예제를 보면 얼마나 편한지 알수 있다!
  ```jsx
  const deliveryProduct = {
   orderedDate: '2018-01-15',
@@ -268,3 +268,96 @@ const getArea = (info) => {
 getArea({ width: 10, height: 50 })
 ```
 getArea라는 함수는 info라는 객체를 받아서 해체 할당을 통해서 width에 width를 height에 height를 받고, 이 둘의 곱을 리턴한다.  
+
+# [AskDjango와 함께 장고걸스 튜토리얼 따라하기]  
+## [django 장고 Overview]
+1. django 장고란
+> 장고는 파이썬으로 작성된 오픈 소스 웹 프레임워크로, MVT 패턴을 따르고 있다.    
+2. 장고와 같은 웹 프레임워크는 왜 필요할까?      
+> 웹 서버는 요청에 대해서 웹페이지와 함께 안에 요청에 대한 응답을 보낸다. 장고가 그 특정 컨텐츠를 만드는 역할을 하는 것이다.   
+3. 서버에 웹 사이트를 요청하면, 장고는 무엇을 할끼?
+> 요청이 장고로 전달되어서, 장고 urlresolver에서 주소를 가져와 할일을 정하게 된다.      
+> 주소를 가져와 패턴목록에서 비교를 한 뒤, 장고는 해당 요청을 관련된 함수(view)에 넘겨준다.      
+여기서 view가 정확히 감이오지 않아서 검색해보니,       
+"View는 필요한 데이타를 모델 (혹은 외부)에서 가져와서 적절히 가공하여 웹 페이지 결과를 만들도록 컨트롤하는 역활을 한다."고 한다.        
+
+## [나의 첫 번째 Django 프로젝트 생성하기]
+> 장고의 기본 골격을 만들어주기!
+- 유의사항 : 장고는 디렉토리의 파일명이 매우 중요하다. 마음대로 변경하거나 옮기면 X!! 장고를 위해서 특정한 구조를 유지해야한다. 그리고 모든 작업은 가상환경 안에서 해야 한다는 것을 명심하자. (myvenv)라고 terminal에서 보이는지 꼭 확인하기.
+1. 가상환경 활성화 하기
+```
+cd /Users/jiyun/Desktop/djangogirls 
+source myvenv/bin/activate
+```
+나는 Desktop 밑에 djangogirls라는 파일을 만들어뒀고, myvenv라는 파일에 가상환경을 설정했다.          
+활성화를 시키기 위에서는 위와 같은 과정을 꼭 거치자!    
+         
+2. django-admin을 이용하여 디렉토리와 파일 생성하기
+```
+django-admin startproject mysite .
+```
+현재 내가 djangogirls라는 파일에 있는데, 이 곳에 mysite라는 파일이 생성된다.    
+그리고 manage.py라는 스크립트도 생성되는데, 사이트 관리를 도와주는 역할을 한다.
+      
+3. 설정 변경하기    
+- TIME_ZONE을 settings.py에서 Asia/Seoul로 바꿔준다. 시간대를 바꿔주는 작업
+- 정적 파일 경로 추가로 settings.py에서 STATIC_ROOT = os.path.join(BASE_DIR,'static')을 추가한다. 정적 파일과 관련한 설정을 한 곳에서 하기 위한 작업으로 뒤에서 더 자세히 다룬다고 함   
+- ALLOWED_HOSTS = []에 * 을 넣어준다.  
+    
+4. 데이터베이스를 생성 및 웹 서버 작동확인     
+- python manage.py migrate 명령어를 통해서 데이터베이스를 생성한다. manage.py를 이용   
+- python manage.py runserver 명령어를 통해서 웹 서버를 실행한다. 
+- localhost:8000에서 제대로 실행되는지 확인하기!    
+     
+## [Django모델]
+> 장고 모델은 객체의 특별한 종류로, 모델을 저장하면 그 내용이 데이터베이스에 저장된다.
+1. 어플리케이션 만들기
+```
+python manage.py startapp blog 
+```
+해당 명령어를 통하여 blog라는 어플리케이션을 만든다. vscode를 보면 생성된 것을 확인할 수 있다.     
+생성한 후에는 이 사실을 장고에게 알려줘야 한다. 바로 아까 설정을 변경한 settings.py에 가서 새로생긴 어플리케이션을 추가해준다.   
+INSTALLED_APPS에 가서 'blog'를 적어주고 오기!    
+    
+2. 블로그 글 모델 만들기
+우리가 만들려는 블로그의 모델을 정의해준다. blog아래 models.py라는 곳에다가 아래와 같은 코드를 적어준다.   
+ ```jsx
+from django.conf import settings
+from django.db import models
+from django.utils import timezone
+
+
+class Post(models.Model):
+    author = models.ForeignKey(settings.AUTH_USER_MODEL, on_delete=models.CASCADE)
+    title = models.CharField(max_length=200)
+    text = models.TextField()
+    created_date = models.DateTimeField(
+            default=timezone.now)
+    published_date = models.DateTimeField(
+            blank=True, null=True)
+
+    def publish(self):
+        self.published_date = timezone.now()
+        self.save()
+
+    def __str__(self):
+        return self.title
+ ```
+ > 코드를 보면 아마도 블로그에서 글을 쓰는 모델인가? 싶었다. 뭔가 작성자, 제목 이런 것들이? 
+ 특히 publish 내용들이 글을 저장하는 함수들 같다고 생각했다..    
+위의 코드는 Post라는 객체를 정의하는데 Post는 모델의 이름이라고 한다. models는 Post가 장고 모델임을 의미한다.   
+우리가 DB에서 속성에 대한 데이터 타입을 정의 했는데, 위에 코드에 나온 것들이 아래와 같은 의미~
+- models.ForeignKey는 다른 모델에 대한 링크를 의미한다. 
+- models.DateTimeField는 날짜와 시간 의미 
+- models.CharField는 글자 수가 제한된 텍스트 정의할 때
+- models.TextField는 글자 수에 제한이 없는 긴 텍스트를 정의할 때  
+    
+3. 데이터베이스에 모델을 위한 테이블 만들기   
+우리가 앞서 Post라는 모델을 만들어줬다. 이제 이걸 알리고! 반영해달라고 manage.py에게 알려야 한다.
+```jsx
+python manage.py makemigrations blog
+python manage.py migrate blog
+```
+>manage.py가 정말 많이 쓰이는 것 같다.  
+
+[궁금한 점] : 사실,, 장고가 뭔가 알 것같은데 모르겠는? 뒤에 좀 더 들어봐야지 감이 올 것 같다...
