--- a/20201015.md
+++ b/20201015.md
@@ -139,4 +139,28 @@ Post.objects.filter(published_date__lte=timezone.now())
 Post.objects.order_by('created_date')
 ```
 위의 코드는 글들은 작성 일에 따라서 오름차순(default)로 정렬하는 것이다. 만약에 내림차순을 하고 싶으면 -created_date를 괄호 안에 작성하면 된다.      
-쿼리셋은 어느 하나만 쓸 수 있는 것은 아니고, filter나 order_by를 같이 쓸 수도 있다. ***연결***이 가능하다.
+쿼리셋은 어느 하나만 쓸 수 있는 것은 아니고, filter나 order_by를 같이 쓸 수도 있다. ***연결***이 가능하다.                  
+                    
+## [장고 템플릿]
+***장고 템플릿 태그***는 파이썬을 HTML로 바꿔주어, 빠르고 쉽게 동적인 웹 사이트를 만들 수 있게 도와준다.                
+장고 템플릿 안에 있는 값을 출력하려면, 변수 이름을 ***{}*** 안에 넣어줘야 한다.          
+               
+앞서 내가 Post 모델에 썼던 글들은 post_list에 넣어줬는데, 이들을 가지런하게 하나씩 HTML에 나타나게 하려고 한다.                          
+여기서! python의 for loop문을 쓰려면 ***{%for%}와 {%endfor%}*** 를 이용하면 된다.
+```jsx
+{% for post in post_list %}
+        <div class="post">
+            <div class="date">
+                <p>{{ post.published_date }}</p>
+            </div>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+{% endfor %}
+```
+여기서, ***|linebreaksbr*** 은 <br> 태그로 구분이 되고, ***|linebreaks*** 은 <p> 태그로 구분이 된다.                
+
+<Question>
+1. 장고 모델이 데이터베이스 정보? 어떻게 담아야하는지,,,,? 외래키 이런정보같은거,,,그리고 ORM이 DB와 모델을 매핑해주는 형식이 맞는지?      
+2. view가 flask의 app.py에서 jsonify하던 그거랑 비슷한건지? 요청 받으면 해당하는 결과를 돌려주는??
+3. 그리고 이렇게 만든 아이들을 url이 연결해주는건가,,? @app.route처럼?! 
