--- a/20201015.md
+++ b/20201015.md
@@ -158,11 +158,9 @@ Post.objects.order_by('created_date')
         </div>
 {% endfor %}
 ```
-여기서, ***|linebreaksbr*** 은 <br> 태그로 구분이 되고, ***|linebreaks*** 은 <p> 태그로 구분이 된다.                
+여기서, ***|linebreaksbr***은 br태그로 구분이 되고, ***|linebreaks***은 p태그로 구분이 된다.                                              
 
 <Question>
-1. 장고 모델이 데이터베이스 정보? 어떻게 담아야하는지,,,,? 외래키 이런정보같은거,,,그리고 ORM이 DB와 모델을 매핑해주는 형식이 맞는지?             
-     
-2. view가 flask의 app.py에서 jsonify하던 그거랑 비슷한건지? 요청 받으면 해당하는 결과를 돌려주는??                 
-
-3. 그리고 이렇게 만든 아이들을 url이 연결해주는건가,,? @app.route처럼?!                                               
+1. 장고 모델이 데이터베이스 정보? 어떻게 담아야하는지,,,,? 외래키 이런정보같은거,,,그리고 ORM이 DB와 모델을 매핑해주는 형식이 맞는지?<br>             
+2. view가 flask의 app.py에서 jsonify하던 그거랑 비슷한건지? 요청 받으면 해당하는 결과를 돌려주는??<br>
+3. 그리고 이렇게 만든 아이들을 url이 연결해주는건가,,? @app.route처럼?!<br>                                               
